fix jumping in chat when multiple conversations

--- a/web/css/components/chat.css
+++ b/web/css/components/chat.css
@@ -24,6 +24,7 @@ LIVE CHAT
 
 .conversations.show-conversation-list {
   padding-left: 275px;
+  overflow-y: hidden;
 }
 
 .conversations .avatar {
